# ferramentas-nlp

./: .gitignore  pyproject.toml
nlp/: extracao_features.py  nuvem_palavras.py  utils.py
